--- a/recipes/templates/recipes/pages/home.html
+++ b/recipes/templates/recipes/pages/home.html
@@ -1,22 +1,12 @@
-{% include 'recipes/partials/head.html' %}
-
-<body>
-   {% include 'recipes/partials/header.html' %}
-   {% include 'recipes/partials/search.html' %}
-
-   <main class="main-content-container">
-      <div class="main-content main-content-list container ">
-         {% include 'recipes/partials/recipe.html' %}
+{% extends 'global/base.html' %}
 
 
-      </div>
+{% block title %}home |{% endblock title %}
 
-
-      </div>
-   </main>
-
-   {% include 'recipes/partials/footer.html' %}
-
-</body>
-
-</html>
+{% block content %}
+<div class="main-content main-content-list container ">
+   {% for recipe in recipes  %}
+      {% include 'recipes/partials/recipe.html' %}
+   {% endfor %}
+</div>
+{% endblock content %}
