--- a/recipes/templates/recipes/partials/recipe.html
+++ b/recipes/templates/recipes/partials/recipe.html
@@ -1,48 +1,46 @@
 <div class="recipe recipe-list-item">
     <div class="recipe-cover">
-        <img src="https://placehold.co/1280x720/269fe6/png" alt="Temporário">
+        <img src={{recipe.cover.url}} alt="Temporário">
     </div>
     <div class="recipe-title-container">
-        <h2 class="recipe-title">Lorem ipsum dolor sit amet.</h2>
+        <h2 class="recipe-title">{{recipe.title}}</h2>
     </div>
     <div class="recipe-author">
         <span class="recipe-author-item">
             <i class="fas fa-user"></i>
-            Otávio miranda
+            {{ recipe.author.first_name }} {{recipe.author.last_name}}
         </span>
         <span class="recipe-author-item">
             <i class="fas fa-calendar-alt"></i>
-            16/10/2022 ás 11:21
+             às {{ recipe.created_at|date:"d/m/Y" }} às {{ recipe.created_at|date:"H:i" }}  
         </span>
         <span class="recipe-author-item">
             <a href="/recipes/category/cafe-da-manha/">
                 <i class="fas fa-layer-group"></i>
-                <span>café da manhã</span>
+                <span>{{recipe.category.name}}</span>
             </a>
         </span>
     </div>
     <div class="recipe-content">
-        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Perspiciatis accusamus tenetur
-            repellendus magnam pariatur laboriosam nam, vitae natus, quasi deleniti provident molestiae,
-            fuga atque neque ex tempora dolorum expedita perferendis!</p>
+        <p>{{ recipe.description}}</p>
     </div>
     <div class="recipe-meta-container">
         <div class="recipe-meta recipe-preparation">
             <h3 class="recipe-meta-title"><i class="fas fa-stopwatch">Preparo</i></h3>
             <div class="recipe-meta-text">
-                0 Minutos
+                {{recipe.preparation_time}} {{recipe.preparation_time_unit}}
             </div>
         </div>
         <div class="recipe-meta recipe-servings">
             <h3 class="recipe-meta-title"><i class="fas fa-pizza-slice"></i>Porções</h3>
             <div class="recipe-meta-text">
-                0 Porções
+                {{recipe.servings}} {{recipe.servings.unit}}
             </div>
         </div>
 
     </div>
     <footer class="recipe-footer">
-        <a href="#" class="recipe-read-more button-dark button-full-width">
+        <a href="recipes/3" class="recipe-read-more button-dark button-full-width">
             <i class="fas fa-eye"></i>
             <span>ver mais...</span>
         </a>
