--- a/recipes/templates/recipes/partials/recipe.html
+++ b/recipes/templates/recipes/partials/recipe.html
@@ -1,9 +1,15 @@
 <div class="recipe recipe-list-item">
     <div class="recipe-cover">
-        <img src={{recipe.cover.url}} alt="Temporário">
+        <a href="{% url 'recipes:recipe' recipe.id%}">
+            <img src={{recipe.cover.url}} alt="Temporário">
+        </a>
     </div>
     <div class="recipe-title-container">
-        <h2 class="recipe-title">{{recipe.title}}</h2>
+        <h2 class="recipe-title">
+            <a href="{% url 'recipes:recipe' recipe.id%}">
+                {{recipe.title}}
+            </a>
+        </h2>
     </div>
     <div class="recipe-author">
         <span class="recipe-author-item">
@@ -12,7 +18,7 @@
         </span>
         <span class="recipe-author-item">
             <i class="fas fa-calendar-alt"></i>
-             às {{ recipe.created_at|date:"d/m/Y" }} às {{ recipe.created_at|date:"H:i" }}  
+            às {{ recipe.created_at|date:"d/m/Y" }} às {{ recipe.created_at|date:"H:i" }}
         </span>
         <span class="recipe-author-item">
             <a href="/recipes/category/cafe-da-manha/">
@@ -39,10 +45,18 @@
         </div>
 
     </div>
-    <footer class="recipe-footer">
-        <a href="recipes/3" class="recipe-read-more button-dark button-full-width">
-            <i class="fas fa-eye"></i>
-            <span>ver mais...</span>
-        </a>
-    </footer>
+    {% if is_detail_page is not True %}
+        <footer class="recipe-footer">
+            <a href="{% url 'recipes:recipe' recipe.id%}" class="recipe-read-more button-dark button-full-width">
+                <i class="fas fa-eye"></i>
+                <span>ver mais...</span>
+            </a>
+        </footer>
+    {%endif%}
+
+    {% if is_detail_page is True  %}
+        <div class="preparetion-steps">
+            {{recipe.preparation_steps|linebreaksbr}}
+        </div>
+    {% endif%}
 </div>
