--- a/recipes/templates/recipes/partials/recipe.html
+++ b/recipes/templates/recipes/partials/recipe.html
@@ -14,27 +14,35 @@
         </h2>
     </div>
     <div class="recipe-author">
+        
         <span class="recipe-author-item">
             <i class="fas fa-user"></i>
-
-            {% if recipe.author.first_name %}
-                
-            {{ recipe.author.first_name }} {{recipe.author.last_name}}
+            {% if recipe.author is not None %}
+                {% if recipe.author.first_name %}
+                    {{ recipe.author.first_name }} {{recipe.author.last_name}}
+                {% else %}
+                    {{recipe.author.username }}
+                {% endif %}
             {% else %}
-            {{recipe.author.username }}
+                Desconhecido
             {% endif %}
-
+            
         </span>
         <span class="recipe-author-item">
             <i class="fas fa-calendar-alt"></i>
             às {{ recipe.created_at|date:"d/m/Y" }} às {{ recipe.created_at|date:"H:i" }}
         </span>
-        <span class="recipe-author-item">
-            <a href="{% url 'recipes:category' recipe.category.id %}">
-                <i class="fas fa-layer-group"></i>
-                <span>{{recipe.category.name}}</span>
-            </a>
-        </span>
+
+        {% if recipe.category is not None %}
+            
+            <span class="recipe-author-item">
+                <a href="{% url 'recipes:category' recipe.category.id %}">
+                    <i class="fas fa-layer-group"></i>
+                    <span>{{recipe.category.name}}</span>
+                </a>
+            </span>
+        {% endif %}
+
     </div>
     <div class="recipe-content">
         <p>{{ recipe.description}}</p>
@@ -65,7 +73,15 @@
 
     {% if is_detail_page is True  %}
         <div class="preparetion-steps">
-            {{recipe.preparation_steps|linebreaksbr}}
+            {% if recipe.preparation_steps_is_html is True %}
+                {{ recipe.preparation_steps|safe }}
+               
+        
+            {% else %}
+            
+                {{ recipe.preparation_steps|linebreaksbr }}
+            {% endif %}
         </div>
+        
     {% endif%}
 </div>
