--- a/recipes/templates/recipes/partials/recipe.html
+++ b/recipes/templates/recipes/partials/recipe.html
@@ -57,7 +57,7 @@
         <div class="recipe-meta recipe-servings">
             <h3 class="recipe-meta-title"><i class="fas fa-pizza-slice"></i>Porções</h3>
             <div class="recipe-meta-text">
-                {{recipe.servings}} {{recipe.servings.unit}}
+                {{recipe.servings}} {{recipe.servings_unit}}
             </div>
         </div>
 
